Sun Sep 21 14:11:23 2014  Tanaka Akira  <akr@fsij.org>

	* thread_pthread.c (native_set_thread_name): New function to
	  set thread name visible with ps command on GNU/Linux.
	  Ex. ps -o %c -L

	* thread.c (thread_start_func_2): Call native_set_thread_name at
	  beginning.
	  (rb_thread_inspect_msg): Extract from rb_thread_inspect.

Sun Sep 21 12:49:11 2014  Eric Wong  <e@80x24.org>

	* iseq.c (rb_iseq_defined_string): trim redundant semi-colon

Sun Sep 21 12:19:29 2014  Eric Wong  <e@80x24.org>

	* file.c (rb_find_file_ext_safe): clear tmp buffer on failure
	  (rb_find_file_safe): ditto

Sat Sep 20 04:42:18 2014  Masaki Matsushita <glass.saga@gmail.com>

	* lib/csv.rb: avoid unnecessary object allocations.
	  patch is from Andrew Vit. [ruby-core:63215] [Feature #9952]

Sun Sep 21 12:10:18 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* lib/rexml/**/*.rb: removed commented-out code.

Sat Sep 20 03:46:58 2014  Masaki Matsushita <glass.saga@gmail.com>

	* array.c: use rb_equal_opt() for performance improvement.
	  [ruby-core:64954] [Feature #10227]

Sun Sep 21 11:16:56 2014  Masaki Suketa <masaki.suketa@nifty.ne.jp>

	* ext/win32ole/win32ole.c (rbtime2vtdate, vtdate2rbtime): fix
	  the bug in conversion of milliseconds. [Bug #10258]

	* test/win32ole/test_win32ole_variant.rb
	  (test_conversion_dbl2date_with_msec,
	  test_conversion_time2date_with_msec): use assert_in_delta instead
	  of assert_equal to treat an acceptable error range.

Sun Sep 21 11:03:32 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* signal.c (ruby_signal): although "EINVAL from sigaction(2) is
	  not a bug", but even it is a failure.  pointed at toRuby/guRuby
	  in RubyHiroba.

Sat Sep 20 03:00:26 2014  Masaki Matsushita <glass.saga@gmail.com>

	* lib/tempfile.rb: define parameters appropriately and some
	  refactoring.

	* lib/tmpdir.rb: ditto.

Sat Sep 20 23:58:21 2014  Tanaka Akira  <akr@fsij.org>

	* enum.c (enum_chunk): Deprecate the state management.
	  (enum_slice_before): Ditto.
